--- a/index.html
+++ b/index.html
@@ -82,10 +82,23 @@
   .grid{display:grid; grid-template-columns:1fr 360px; gap:20px;}
   @media(max-width:880px){.grid{grid-template-columns:1fr}.sidebar{order:-1}}
 
-  .member-card{
-    display:flex; gap:16px; background:#60a5fa; border-radius:16px;
-    padding:18px; margin-bottom:20px; color:#fff;
+  /* ================== THÀNH VIÊN DÀN NGANG ================== */
+  .members{
+    display:grid;
+    grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
+    gap:20px;
   }
+  .member-card{
+    display:flex; 
+    gap:16px; 
+    background:#60a5fa; 
+    border-radius:16px;
+    padding:18px; 
+    color:#fff;
+    height:100%; /* giúp các khung đều nhau */
+  }
+  /* =========================================================== */
+
   .mc-avatar-img{width:70px;height:70px;border-radius:50%;object-fit:cover;}
   .mc-avatar{width:70px;height:70px;border-radius:50%;background:rgba(0,0,0,0.2);
              display:flex;align-items:center;justify-content:center;font-weight:700;color:#fff;}
@@ -96,7 +109,7 @@
   .card{background:var(--card); padding:18px; border-radius:var(--radius); box-shadow:0 8px 28px rgba(2,6,23,0.06); color:#003a65 !important;}
   
   .section-title{display:flex;align-items:center;justify-content:space-between;margin-bottom:12px;}
-  .members{display:flex; flex-direction:column; gap:12px;}
+  
   .list-links{display:grid; grid-template-columns:repeat(2,minmax(0,1fr));gap:10px;}
   
   .link-btn{
@@ -208,10 +221,10 @@ members.forEach(m=>{
 const links = [
   {title:'Bài 7', href:'https://docs.google.com/document/d/1m_pAeJTqHiUTKwysgXKJ3bCzX8lwi2Yv1XZQs52rP88/edit?usp=drivesdk'},
   {title:'Bài 8', href:'https://docs.google.com/document/d/1MrnnoU4JN_IzSy4xH1nbMDgYQD1JE3fLebK19yrAiR8/edit?usp=drivesdk'},
-  {title:'Bài 9', href:'https://docs.google.com/document/d/1FTtAe2Iq_p9j4Z45Em5o9oa_pmdBA1fSOLckO9ltf7I/edit?usp=drivesdk'},
+  {title:'Bài 9', href:'https://docs.google.com/document/d/1FTtAe2Iq_p9j4Z45Em5o9oa_pmdBA1fSOLck.О9ltf7I/edit?usp=drivesdk'},
   {title:'Bài 10', href:'https://docs.google.com/document/d/17cf397J36QDESuapkWCTt8-URsjQ4KTPS0GA-4v0QHU/edit?usp=drivesdk'},
-  {title:'Bài 11',href:'https://docs.google.com/document/d/11w6pyc9h3xqF6wHZlIJ2K9O7fVp22r7-esO0zK-Ziiw/edit?usp=drivesdk'},
-  {title:'Bài 12',href:'https://docs.google.com/document/d/13vb090tUJtHBMC0W6Ib7LANkDbnA5mFGVnMKD1hAOqw/edit?usp=drivesdk'}
+  {title:'Bài 11', href:'https://docs.google.com/document/d/11w6pyc9h3xqF6wHZlIJ2K9O7fVp22r7-esO0zK-Ziiw/edit?usp=drivesdk'},
+  {title:'Bài 12', href:'https://docs.google.com/document/d/13vb090tUJtHBMC0W6Ib7LANkDbnA5mFGVnMKD1hAOqw/edit?usp=drivesdk'}
 ];
 const linksEl = document.getElementById('links');
 links.forEach(l=>{
@@ -254,3 +267,4 @@ function handleSubmit(e){
 
 </body>
 </html>
+
