--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ members.forEach((m)=>{
 
 // Dữ liệu bài tập, có thể thêm nhiều hơn
 const links = [
-  {title:'Bài 7', href:'#'},
+  {title:'Bài 7', href:'https://nt4620567-byte.github.io/B-I-7/'},
   {title:'Bài 8', href:'#'},
   {title:'Bài 9', href:'#'},
   {title:'Bài 10', href:'#'},
