--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ members.forEach((m)=>{
 // Dữ liệu bài tập
 const links = [
   {title:'Bài 7', href:'https://nt4620567-byte.github.io/B-I-7/'},
-  {title:'Bài 8', href:'#'},
+  {title:'Bài 8', href:'https://dangthunguyenhuynh43-ui.github.io/BAI8/'},
   {title:'Bài 9', href:'#'},
   {title:'Bài 10', href:'#'},
   {title:'Bài 11', href:'#'},
